# jxvm

./: CMakeLists.txt  LICENSE  Readme.md  build_and_test.sh
apps/: CMakeLists.txt
apps/jxvm/: main.cpp
javalib/: build.xml
javalib/src/jx/system/: System.java
javalib/src/util/concurrent/atomic/: AtomicInteger.java  AtomicLong.java
javalib/test/jx/test/: InterpreterTest.java
lib/: CmakeLists.txt
lib/jx/: BinaryReader.h  ByteRange.h  ClassFile.cpp  ClassFile.h  ClassLoader.cpp  ClassLoader.h  DescriptorParser.cpp  DescriptorParser.h  Interpreter.cpp  Interpreter.h  Log.cpp  Log.h  MethodOverrides.cpp  MethodOverrides.h  Ops.cpp  Ops.h  StringUtils.cpp  StringUtils.h  Util.cpp  Util.h  Variable.cpp  Variable.h  VmMemory.cpp  VmMemory.h  types.h
manual_test/simple_calculation/: Calculator.java
scripts/: build_ops.sh
test/: CMakeLists.txt  DescriptorParserTest.cpp  InterpreterTest.cpp  StringConversionTest.cpp  main.cpp
